# BoulderCumulants

./: BCpseudocode.C  BoulderCumulants.C  BoulderCumulants.h  BoulderCumulantsFunctions.C  BoulderCumulantsInitializations.C  BoulderCumulantsLinkDef.h  BoulderCumulantsOffsets.C  BoulderCumulantsOffsetsRBR.C  BoulderCumulantsProcessEvent.C  BoulderCumulantsSpecialEventCuts.C  BoulderCumulantsSpecialEventCuts_pro104.C  BoulderCumulantsSpecialEventCuts_pro109.C  Makefile.am  README.md  RunMyMacro.C  Run_BoulderCumulants.C  Run_BoulderCumulantsRun14.C  Run_BoulderCumulantsRun15.C  Run_BoulderCumulantsRun16.C  configure.in
SmallWorkNew/: compare.C  histos_14706.root  histos_14713.root  histos_14720.root  histos_14778.root  histos_14848.root  improved_20170517-2216.root  new_simple.C  process_cumulants.C  smallsub.C  temp.root  tree_20190409-1135.root  tree_20190522-0935.root  tree_20190528-2112.root  tree_new.root
WorkAuAu/: README  README.md  add_prelimlogo  analysis.sh  calc_cumulants.C  calc_subevents.C  checker_v3.C  compare_ampt.C  compare_weights.C  copy_collect.sh  corr_cn.C  do_ratios.C  do_special.C  do_v3_analytical.C  dothething.h  dothething_components.C  dothething_cumulants.C  dothething_diagnostics.C  get_2sub4part.C  get_cumulants.C  get_offsets.C  get_ratios.C  get_recursion.C  get_sigma.C  get_subevents.C  get_sys.C  help_v3_csys.C  helpmecent.C  helpmestrk.C  hsqrt.C  jeck.C  make_centrality_offsets.C  new_cumulants_centrality.C  plot_recomp.C  plot_recv2.C  plot_recv3.C  plot_special.C  plot_subc2.C  plot_subcomp.C  plot_subevents.C  (+19 more)
work/: README  (+22 more)
(+93 files in other folders)
